--- a/index.html
+++ b/index.html
@@ -2,14 +2,29 @@
 <html lang="en">
 
 <head>
-    <meta charset=”UTF-8”>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Leonardo Olia">
     <title>Giallo Booleano</title>
 
-    <!-- Stylesheet -->
-    <link rel=”stylesheet” href="css/style.css">
-    <link rel=”stylesheet” href="css/responsive.css">
+    <!-- ?Fonts -->
+    <!-- Header title -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Open+Sans:wght@300;500&family=Pixelify+Sans&family=Rubik+Mono+One&display=swap"
+        rel="stylesheet">
+
+    <!-- Body -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nerko+One&family=Open+Sans:wght@300;500&family=Pixelify+Sans&family=Rubik+Mono+One&display=swap"
+        rel="stylesheet">
+
+    <!-- ?Stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
