added responsive header

--- a/index.html
+++ b/index.html
@@ -28,7 +28,23 @@
 </head>
 
 <body>
+    <header class="main-header">
+        <h1>GIALLO BOOLEANO</h1>
+    </header>
 
+    <main>
+        <section class="recipe">
+
+        </section>
+
+        <section class="presentation">
+
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
