added recipe section

--- a/index.html
+++ b/index.html
@@ -33,13 +33,57 @@
     </header>
 
     <main>
-        <section class="recipe">
+        <div class="container">
+            <section class="recipe">
+                <div class="row">
+                    <!-- Nome ricetta -->
+                    <div class="col">
+                        <div class="recipe-type">
+                            <span class="category">DOLCI E DESSERTS</span>
+                            <h3 class="recipe-name">Tiramisù</h3>
+                        </div>
+                        <div class="recipe-rating">
+                            <span class="rating-number"><span class="bold">4.6</span>/5</span>
+                            <span class="rate">RATE</span>
+                        </div>
+                    </div>
 
-        </section>
+                    <!-- Video Youtube -->
+                    <div class="col youtube">
+                        <iframe width="100%" height="315"
+                            src="https://www.youtube.com/embed/JVT900H6s0g?si=sq1tVtwa3FBH5JrS"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                    </div>
 
-        <section class="presentation">
+                    <!-- Preparazione -->
+                    <div class="col preparation">
+                        <div class="recipe-info">
+                            <div class="diet-info">
+                                <span class="kcal">544 Kcal</span>
+                                <span class="more-info">+ info</span>
+                            </div>
+                            <div class="diet-type">VEGETARIANO</div>
+                        </div>
 
-        </section>
+                        <div class="recipe-preparation">
+                            <ul>
+                                <li>Difficoltà: <span class="bold">Facile</span></li>
+                                <li>Tempo: <span class="bold">40 min</span></li>
+                                <li>Porzione per: <span class="bold">8 persone</span></li>
+                                <li>Costo: <span class="bold"> contenuto</span></li>
+                                <li><span class="bold">Note</span>: +2ore di riposo in frigo</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="presentation">
+
+            </section>
+        </div>
     </main>
 
     <footer>
