--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nerko+One&family=Open+Sans:wght@300;500&family=Pixelify+Sans&family=Rubik+Mono+One&display=swap"
         rel="stylesheet">
 
+    <!-- ?Fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <!-- ?Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -78,6 +84,42 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Social -->
+                <div class="social">
+                    <ul>
+                        <li><a href="#">
+                                <i class="fa-brands fa-facebook" style="color: #237cf3;"></i>
+                                <span class="social-name">FACEBOOK</span>
+                            </a>
+                        </li>
+                        <li><a href="#">
+                                <i class="fa-brands fa-twitter" style="color: #05a0ff;"></i>
+                                <span class="social-name">TWITTER</span>
+                            </a>
+                        </li>
+                        <li><a href="#">
+                                <i class="fa-brands fa-instagram" style="color: #e15b8d;"></i>
+                                <span class="social-name">INSTAGRAM</span>
+                            </a>
+                        </li>
+                        <li><a href="#">
+                                <i class="fa-brands fa-pinterest" style="color: #eb4a4a;"></i>
+                                <span class="social-name">PINTEREST</span>
+                            </a>
+                        </li>
+                        <li><a href="#">
+                                <i class="fa-brands fa-youtube" style="color: #e62222;"></i>
+                                <span class="social-name">YOUTUBE</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <figure class="banner">
+                    <img src="img/banner.png" alt="banner pubblicitario">
+                </figure>
+
             </section>
 
             <section class="presentation">
