added presentation section and footer

--- a/index.html
+++ b/index.html
@@ -119,17 +119,46 @@
                 <figure class="banner">
                     <img src="img/banner.png" alt="banner pubblicitario">
                 </figure>
-
             </section>
 
             <section class="presentation">
-
+                <h3>PRESENTATION</h3>
+                <figure class="presentation-image">
+                    <img src="img/tiramisu.jpg" alt="immagine tiramisù">
+                </figure>
+                <p>Back in the day, grandmothers used to prepare a breakfast that we might call humble today, but was
+                    considered very rich at the time! Today the recipe is still unchanged, just break a very fresh egg
+                    into a glass, beat it with sugar, and add coffee or hot milk, for children, or <span
+                        class="bold">Marsala wine</span> or
+                    aniseed for adults. This marvelous cream gave rise to mascarpone cream used to make <span
+                        class="bold">Tiramisù</span>
+                    (mascarpone cheese and ladyfingers dessert). This is the <span class="bold">best Italian
+                        dessert</span>, the most popular and
+                    beloved of them all, and it has also birthed many other versions, even an egg- free Tiramisù! There
+                    is also a strawberry and Nutella tiramisù! Although the origins of this
+                    famous dessert are unclear, because it is disputed between the regions of Veneto, Friuli-Venezia
+                    Giulia, Piedmont, and Tuscany, it remains a cornerstone of Italian cuisine and it's widely prepared
+                    from North to South. Unfortunately, we weren't able to find out who invented it, but we can
+                    certainly teach you how to prepare your best tiramisù ever. So here's the recipe: try it and let us
+                    know what you think!</p>
             </section>
         </div>
     </main>
 
     <footer>
-
+        <div class="company-address">
+            <p class="bold"><i class="fa-regular fa-copyright"></i>2021 Giallo Booleano S.p.a.</p>
+            <p>Via Tal dei tali,10 - 88046 Lamezia Terme - VAT 43940293020</p>
+        </div>
+        <div class="company-info">
+            <ul>
+                <li><a href="#">About us</a></li>
+                <li><a href="#"> Terms of use</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Cookie Policy</a></li>
+                <li><a href="#">Disclaimer</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 
