--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
                             <h3 class="recipe-name">Tiramisù</h3>
                         </div>
                         <div class="recipe-rating">
-                            <span class="rating-number"><span class="bold">4.6</span>/5</span>
-                            <span class="rate">RATE</span>
+
+                            <span class="rating-number"><span class="bold"><i class="fa-solid fa-star"
+                                        style="color: #f7972e;"></i>4.6</span>/5</span>
+                            <span class="rate bold">RATE</span>
                         </div>
                     </div>
 
