added background colors and icons

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="col">
                         <div class="recipe-type">
                             <span class="category">DOLCI E DESSERTS</span>
-                            <h3 class="recipe-name">Tiramisù</h3>
+                            <h3 class="recipe-name bold">Tiramisù</h3>
                         </div>
                         <div class="recipe-rating">
 
@@ -70,18 +70,24 @@
                         <div class="recipe-info">
                             <div class="diet-info">
                                 <span class="kcal">544 Kcal</span>
-                                <span class="more-info">+ info</span>
+                                <span class="more-info bold">+ info</span>
                             </div>
-                            <div class="diet-type">VEGETARIANO</div>
+                            <div class="diet-type bold"><i class="fa-solid fa-carrot"></i>VEGETARIANO</div>
                         </div>
 
                         <div class="recipe-preparation">
                             <ul>
-                                <li>Difficoltà: <span class="bold">Facile</span></li>
-                                <li>Tempo: <span class="bold">40 min</span></li>
-                                <li>Porzione per: <span class="bold">8 persone</span></li>
-                                <li>Costo: <span class="bold"> contenuto</span></li>
-                                <li><span class="bold">Note</span>: +2ore di riposo in frigo</li>
+                                <li><i class="fa-solid fa-blender" style="color: #f7972e;"></i> Difficoltà: <span
+                                        class="bold">Facile</span></li>
+                                <li><i class="fa-solid fa-clock" style="color: #f7972e;"></i> Tempo: <span
+                                        class="bold">40 min</span></li>
+                                <li><i class="fa-solid fa-chart-pie" style="color: #f7972e;"></i> Porzione per: <span
+                                        class="bold">8 persone</span></li>
+                                <li><i class="fa-solid fa-euro-sign" style="color: #f7972e;"></i> Costo: <span
+                                        class="bold"> contenuto</span></li>
+                                <li><i class="fa-solid fa-thumbtack" style="color: #f7972e;"></i><span
+                                        class="bold"></span>
+                                    Note</span>: +2ore di riposo in frigo</li>
                             </ul>
                         </div>
                     </div>
