--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                     <div class="col">
                         <div class="recipe-type">
                             <span class="category">DOLCI E DESSERTS</span>
-                            <h3 class="recipe-name bold">Tiramisù</h3>
+                            <h3 class="recipe-name bold">Tiramisù <span class="hidden">(Dolce tradizionale)</span></h3>
+
                         </div>
                         <div class="recipe-rating">
 
@@ -87,7 +88,8 @@
                                         class="bold"> contenuto</span></li>
                                 <li><i class="fa-solid fa-thumbtack" style="color: #f7972e;"></i><span
                                         class="bold"></span>
-                                    Note</span>: +2ore di riposo in frigo</li>
+                                    Note</span>
+                                    </span>: +2ore di riposo in frigo</li>
                             </ul>
                         </div>
                     </div>
