--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <section class="recipe">
                 <div class="row">
                     <!-- Nome ricetta -->
-                    <div class="col">
+                    <div class="col recipe-section">
                         <div class="recipe-type">
                             <span class="category">DOLCI E DESSERTS</span>
                             <h3 class="recipe-name bold">Tiramisù <span class="hidden">(Dolce tradizionale)</span></h3>
@@ -156,18 +156,20 @@
     </main>
 
     <footer>
-        <div class="company-address">
-            <p class="bold"><i class="fa-regular fa-copyright"></i>2021 Giallo Booleano S.p.a.</p>
-            <p>Via Tal dei tali,10 - 88046 Lamezia Terme - VAT 43940293020</p>
-        </div>
-        <div class="company-info">
-            <ul>
-                <li><a href="#">About us</a></li>
-                <li><a href="#"> Terms of use</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Cookie Policy</a></li>
-                <li><a href="#">Disclaimer</a></li>
-            </ul>
+        <div class="footer-container">
+            <div class="company-address">
+                <p class="bold"><i class="fa-regular fa-copyright"></i>2021 Giallo Booleano S.p.a.</p>
+                <p>Via Tal dei tali,10 - 88046 Lamezia Terme - VAT 43940293020</p>
+            </div>
+            <div class="company-info">
+                <ul>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#"> Terms of use</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookie Policy</a></li>
+                    <li><a href="#">Disclaimer</a></li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
