fixed receipt section and presentation section

--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
                 </figure>
             </section>
 
-            <section class="presentation">
+            <section class="presentation .clearfix">
                 <h3>PRESENTATION</h3>
-                <figure class="presentation-image">
+                <figure class="presentation-image ">
                     <img src="img/tiramisu.jpg" alt="immagine tiramisù">
                 </figure>
                 <p>Back in the day, grandmothers used to prepare a breakfast that we might call humble today, but was
